Halifax Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -33,7 +33,7 @@
     
     /* Newsletter text(Top right); "Get On The List"*/
     .signup {
-        color: #80c6ce;
+        color: #581d37;
     }
 
     /* sub headers*/
@@ -86,31 +86,31 @@
     
     /* link*/
     a{
-        color:#95a89b;
+        color:#581d37;
     }
     
     a:hover {
-        color:#95a89b;
+        color:#581d37;
        
     }
     
     /* Notice text on left bar */
     .special_notice h5{
-        color:#95a89b;
+        color:#581d37;
     }
     
     /* alphabet A-Z from store list*/
     .alphalist ul li {
-        color: #95a89b;
+        color: #581d37;
     }
     
     /* Top button on store list*/
     .top-text{
-        color:#95a89b;
+        color:#581d37;
     }
     
     .input-group ul li input[type="checkbox"] {
-        background: none repeat scroll 0 0 #95a89b;
+        background: none repeat scroll 0 0 #581d37;
     }
     
     .birthday_input_group{
@@ -124,25 +124,25 @@
     
     /* button from community page */
     .hscbutton {
-        background-color: #95a89b;
-        background-image: -moz-linear-gradient(center top , #95a89b 0px, #95a89b 50%, #95a89b 50%, #95a89b 100%);
-        border: 3px solid #95a89b;
+        background-color: #581d37;
+        background-image: -moz-linear-gradient(center top , #581d37 0px, #581d37 50%, #581d37 50%, #581d37 100%);
+        border: 3px solid #581d37;
     }
     
     /* back link on the top right for detail pages(Event, Promo)*/
     .back-link{
-        color:#95a89b;
+        color:#581d37;
     }
     
     /* Sales & Event title color*/
     .name h3{
-        color: #95a89b;
+        color: #581d37;
     }
     .name h4{
-        color: #95a89b;
+        color: #581d37;
     }
     .name a{
-         color: #95a89b;
+         color: #581d37;
     }
 
 /* end: color change */
