--- a/application.css
+++ b/application.css
@@ -23,12 +23,12 @@
 
     /* Navigation border*/
     .nav-banner {
-        border-bottom: 8px solid #a7ae9e;
+        border-bottom: 8px solid #581d37;
     }
     /* Drop Down */
     .dropdown-menu {
-        background-color: #a7ae9e;
-        border: 1px solid #a7ae9e;
+        background-color: #581d37;
+        border: 1px solid #581d37;
     }
     
     /* Newsletter text(Top right); "Get On The List"*/
