Halifax Centre 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -23,7 +23,7 @@
 
     /* Navigation border*/
     .nav-banner {
-        border-bottom: 8px solid #581d37;
+        border-bottom: 8px solid #424242;
     }
     /* Drop Down */
     .dropdown-menu {
