--- a/application.css
+++ b/application.css
@@ -607,6 +607,10 @@ body{
     }
 }
 
+.hours_home{
+    color: #424242;
+}
+
 @media(max-width: 320px){
     .opened_mobile_menu ul a{
         padding: 5px 0;
