--- a/application.css
+++ b/application.css
@@ -607,6 +607,13 @@ body{
     }
 }
 
+.hours_dot{
+    background:#50E3C2;
+    display:block;
+    height: 10px;
+    width:10px;
+    border-radius:5px;
+}
 
 
 @media(max-width: 320px){
