Halifax Centre 2.0  /application.css

--- a/application.css
+++ b/application.css
@@ -609,7 +609,7 @@ body{
 
 .hours_dot{
     background:#50E3C2;
-    display:block;
+    display:inline-block;
     height: 10px;
     width:10px;
     border-radius:5px;
