--- a/application.css
+++ b/application.css
@@ -45,223 +45,7 @@ body{
     background-repeat: no-repeat; 
 }
 
-.banner_image_div{
-    background-size: cover;
-    background-repeat: no-repeat;  
-    background-position: 50%;
-}
-
-.banner_image_li{
-    height:500px;
-    display:block;
-}
-.popup {
-    text-align: center;
-    border-radius: 6px;
-    background: none repeat scroll 0 0 #000000;
-    color: #FFFFFF;
-    font-size: 18px;
-    font-weight: bold;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    width: 200px;
-    border: solid;
-    border-color: #808080;
-    border-width: 1px;
-    -moz-box-shadow: -1px 1px 4px 1px #000;
-    -webkit-box-shadow: -1px 1px 4px 1px #000;
-    box-shadow: -1px 1px 4px 1px #000;
-}
-
-.flexslider{
-    border:0;
-    margin-bottom: 20px;
-    overflow:hidden;
-}
-
-.flex-control-nav {
-    bottom: 13px;
-    text-align: right;
-    color: transparent;
-    padding-right: 15px;
-}
-
-.flex-control-paging li a{
-    color: transparent;
-}
-
-.flex-direction-nav a{
-    width:28px;
-    height:28px;
-}
-
- .feature_item figure {
-    height: 300px;
-    position: relative;
-    overflow: hidden;
-    margin: 0px;
-    background: #fff;
-    background: no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    border: solid 0px #fff;
-}
-
-.promotion_item figure {
-    height: 230px;
-    position: relative;
-    overflow: hidden;
-    margin: 0px;
-    background: #fff;
-    background: no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    border: solid 0px #fff;
-    margin-bottom:20px;
-}
-
-.feature_item figure figcaption {
-    position: absolute;
-    top: 0;
-    z-index: 11;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-}
-
-.feature_item figure svg {
-    position: absolute;
-    top: -1px;
-    left: 0px;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-}
-
-.feature_item figure figcaption .view_button {
-    position: absolute;
-    padding: 4px 20px;
-    border: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    width: 100%;
-    font-weight: bold;
-    background: #000;
-    color: #fff;
-    padding: 15px 0;
-    bottom:-50px;
-    transition: bottom 0.3s;
-}
-
-.feature_item figcaption:hover .view_button{
-    transition: bottom 0.3s;
-    bottom: 0;
-}
-
-.heading{
-    font-weight: bold;
-    margin-top:0;
-    font-size: 24px;
-    color: #000000;
-}
-
-.social_icons{
-    margin:0 -10px;
-    img{
-        width:50px;
-        padding:0 10px;
-        float:left;
-    }
-}
-
-.site_map_heading{
-    font-weight:bold;
-    font-size: 14px;
-    color: #000;
-    letter-spacing: 0.29px;
-    margin-top: 20px;
-}
-
-.footer_site_map ul {
-    padding: 0;
-    list-style: none;
-    line-height: 25px;
-}
-
-.footer_logo{
-    width: 136px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-.rights_reserved{
-    line-height:25px;
-}
-
-.newsletter_btn{
-    width:180px;
-    display: inline-block;
-    background: #000;
-    color: #fff;
-    font-size: 16px;
-    margin-top: 25px;
-    padding: 14px 0px;
-}
-
-.mobile_menu_container{
-    position: fixed;
-    background: #000;
-    width: 100%;
-    height: 100%;
-    z-index: 12;
-    text-align: center;
-    display:none;
-    top:0;
-}
-
-.opened_mobile_menu{
-    color:#fff;
-    position:absolute;
-    width:100%;
-    top: 50%;
-    -webkit-transform:translateY(-50%);
-    -ms-transform:translateY(-50%);
-    -moz-transform:translateY(-50%);
-    -o-transform:translateY(-50%);
-    transform: translateY(-50%);
-    h4{
-        font-weight: bold;
-        font-size: 24px;
-        margin-bottom: 15px;
-    }
-    ul{
-        padding:0;
-        a{
-            display:block;
-            padding:10px 0;
-            font-size:24px;
-            color:#fff;
-            font-weight: 100;
-        }
-    }
-}
-
-#close_menu{
-    font-style: italic;
-    font-weight: 400;
-    font-family: georgia;
-    display: inline-block;
-    padding: 0 20px;
-    background: #000;
-    cursor:pointer;
-}
+.
 
 .strikethrough{
     border-top: 1px solid #fff;
