Halifax Centre 2.4  /application.css

--- a/application.css
+++ b/application.css
@@ -460,7 +460,7 @@ h4{
 }
 .hero_banner{
     background-color:#000;
-    background-image:url(//codecloud.cdn.speedyrails.net/sites/5808c7e76e6f6414b30c0000/image/jpeg/1491836184000/HSC-Header-compressed.jpg);
+    background-image:url(//codecloud.cdn.speedyrails.net/sites/599da5a06e6f6420d9d40000/image/jpeg/1506370646000/Jean Jacket Header.jpg);
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center center;
@@ -468,7 +468,7 @@ h4{
     h3{
         margin:0;
         font-size: 54px;
-        color: #58595b;
+        color: white;
         letter-spacing: 4px;
         padding-top: 140px;
         margin-bottom: 10px;
