--- a/application.css
+++ b/application.css
@@ -1902,6 +1902,7 @@ gallery:after{
     
     .site_map{
         padding:0 15px;
+        margin-bottom: 43px;
         .row{
             margin-left:0;
             margin-right:0;
