--- a/application.css
+++ b/application.css
@@ -2253,6 +2253,7 @@ gallery:after{
         border-bottom: 1px solid #9B9B9B;
         padding: 15px 0;
         color: #4C4C4C;
+        margin-bottom: 43px;
     }
     
     .right_border{
