--- a/application.css
+++ b/application.css
@@ -49,6 +49,7 @@ body{
     padding: 10px 30px;
     bottom: 0px;
     z-index: 9;
+    font-size: 20px;
     &:hover, &:focus, &:active{
         color:#fff;
     }
