--- a/application.css
+++ b/application.css
@@ -1684,9 +1684,10 @@ gallery:after{
     .hero_banner{
         padding:0 60px;
         height:400px;
-        p{
-            margin-top:15px;
+        p {
+            // margin-top:15px;
             margin-bottom: 25px;
+            padding-top: 20px;
         }
     }
     .feature_items_box{
