--- a/application.css
+++ b/application.css
@@ -409,7 +409,7 @@ h4{
 }
 .main_banner{
     background-color:#000;
-    background-image: url(//codecloud.cdn.speedyrails.net/sites/5808c7e76e6f6414b30c0000/image/jpeg/1491836205000/HSC-InsidePageHeader-compressed.jpg);
+    background-image: url(//codecloud.cdn.speedyrails.net/sites/5af2ef146e6f6450e9160100/image/jpeg/1536597819000/1920x250-HSC-Header-image-Fall-18[4]-compressor.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat; 
@@ -525,7 +525,7 @@ h4{
 
 .jobs_banner{
     background-color: #000;
-    background-image: url(//codecloud.cdn.speedyrails.net/sites/5808c7e76e6f6414b30c0000/image/jpeg/1491836205000/HSC-InsidePageHeader-compressed.jpg);
+    background-image: url(//codecloud.cdn.speedyrails.net/sites/5af2ef146e6f6450e9160100/image/jpeg/1536597819000/1920x250-HSC-Header-image-Fall-18[4]-compressor.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat; 
