Halifax Centre 2.4.1  /application.css

--- a/application.css
+++ b/application.css
@@ -2320,7 +2320,11 @@ gallery:after{
         -moz-column-gap: 75px;
         column-gap: 75px;
     }
-    
+    .store_new_cat_list{
+        border-bottom: 1px solid #979797;
+        padding: 10px;
+        margin-bottom: 20px;
+    }
     
     
     .category_header{
@@ -2328,9 +2332,7 @@ gallery:after{
         color: #D8836C;
         font-size:20px;
         text-transform: uppercase;
-        border-bottom: 1px solid #979797;
-        padding: 10px;
-        margin-bottom: 20px;
+        
     }
     .category_name{
         margin: 10px 0;
