Halifax Centre 2.4.1  /application.css

--- a/application.css
+++ b/application.css
@@ -1626,6 +1626,7 @@ gallery:after{
     #category_selector_container{
         max-height: 300px;
         overflow-y: scroll;
+        display:none;
     }
     .padded_border{
         border-top: 1px solid #979797;
