Halifax Centre 2.4.1  /application.css

--- a/application.css
+++ b/application.css
@@ -1631,6 +1631,7 @@ gallery:after{
     .padded_border{
         border-top: 1px solid #979797;
         margin-top: 20px;
+        display:none;
     }
     body{
         padding-top:0;
