Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -792,7 +792,7 @@ h4{
 .newsletter_btn{
     width:180px;
     display: inline-block;
-    background: #D8836C;
+    background: #ba573c;
     color: #fff;
     font-size: 22px;
     margin-top: 25px;
