Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1128,7 +1128,7 @@ h4{
 .read_more{
     font-weight:lighter;
     font-size: 24px;
-    color: #D8836C;
+    color: #ba573c;
     display: inline-block;
     margin-top: 20px;
     text-decoration: underline;
