Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1284,7 +1284,7 @@ h4{
 
 .holiday_hours_home{
     font-size: 16px;
-    color: #D8836C;
+    color: #ba573c;
     font-family:'eb garamond';
     margin-bottom:10px;
     &:hover{
