Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1288,7 +1288,7 @@ h4{
     font-family:'eb garamond';
     margin-bottom:10px;
     &:hover{
-        color: #D8836C;
+        color: #ba573c;
     }
 }
 
