--- a/application.css
+++ b/application.css
@@ -495,7 +495,7 @@ h4{
     }
     p {
         font-size: 24px;
-        color: #232323;
+        color: #7a7a7a;
         font-weight: bold;
         letter-spacing: 0.5px;
         margin-bottom: 32px;
