Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1386,7 +1386,7 @@ h4{
     font-size: 22px;
     line-height: 30px;
     letter-spacing: 0.5px;
-    color: #5F574B;
+    color: black;
 }
 .main_read_more, .post_read_more {
     position: absolute;
