Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1392,6 +1392,7 @@ h4{
     position: absolute;
     bottom: 33px;
     font-size: 20px;
+    color: #ba573c;
 }
 .main_post_share_icons {
     position: absolute;
