Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1393,6 +1393,7 @@ h4{
     bottom: 33px;
     font-size: 20px;
     color: #ba573c;
+    font-weight: bold;
 }
 .main_post_share_icons {
     position: absolute;
