--- a/application.css
+++ b/application.css
@@ -1393,7 +1393,7 @@ h4{
     bottom: 33px;
     font-size: 20px;
     color: #ba573c;
-    font-weight: bold;
+    background-color: red;
 }
 .main_post_share_icons {
     position: absolute;
