--- a/application.css
+++ b/application.css
@@ -1388,6 +1388,10 @@ h4{
     letter-spacing: 0.5px;
     color: #000;
 }
+
+.main_read_more:hover {
+    color: #000;
+}
 .main_read_more, .post_read_more {
     position: absolute;
     bottom: 33px;
