Halifax Centre 2.6  /application.css

--- a/application.css
+++ b/application.css
@@ -1393,7 +1393,7 @@ h4{
     position: absolute;
     bottom: 33px;
     font-size: 20px;
-    color: #ba573c;
+    color: #467384;
 }
 .main_read_more {
    
