--- a/application.css
+++ b/application.css
@@ -1396,7 +1396,7 @@ h4{
     color: #ba573c;
 }
 .main_read_more {
-   
+   font-weight: 600;
 }
 .main_post_share_icons {
     position: absolute;
