--- a/application.css
+++ b/application.css
@@ -1346,7 +1346,7 @@ h4{
     position: absolute;
     top: 74px;
     right: 0;
-    background: rgba(250, 250, 250, 1);
+    background: rgba(250, 250, 250);
     border: 1px solid #d3d3d3;
 }
 .post_container {
