Halifax Centre 2.4.1  /application.css

--- a/application.css
+++ b/application.css
@@ -478,7 +478,7 @@ h4{
 
 .hero_banner{
     background-color:#000;
-    background-image: url(//codecloud.cdn.speedyrails.net/sites/5af2ef146e6f6450e9160100/image/jpeg/1536412184000/1920x540-HSC-Header-image-Fall-18-compressor.jpg);
+    background-image: url(//codecloud.cdn.speedyrails.net/sites/5af2ef146e6f6450e9160100/image/jpeg/1559056220000/Long Shot Website.jpeg);
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center center;
